# koreatech_MultiAgents_with_CrewAIs

./: .env_copy  README.md  requirements.txt
codes/01_env_config/: 01.개발환경준비.md
codes/n02_crewais/: 02.CrewAI 핵심 개념 (Agent, Task, Crew).md  n01_hellow_crewais.py  n02_crewais_with_topic.py  n03_researcher_writer.py
codes/n02_install_boilerplate_crewais/: README.md  pyproject.toml  report.md
codes/n02_install_boilerplate_crewais/src/n02_install_crewais/: crew.py  main.py
codes/n03_crewai_with_agents/: 03.Agent 및 Task 설계, 프롬프트 작성법.md  n01.travel_planner_wih_inputs.py  n02.travel_planner_wih_tools.py  n03.travel_planner_wih_improvingprompt.py
codes/n03_crewai_with_tools/: n02.travel_planner_wih_tools.py
codes/n04_crewai_with_multi_tools/: 04.외부 도구(Tools) 연동하기.md  n01_crewai_for_tools.py  n02.anytasks_wih_multi_tools.py  n02.scenario_news_wih_multi_tools.py  n03.scenario_recipes_wih_multi_tools.py  n04.scenario_travels_wih_multi_tools.py
codes/n05_crewai_with_anyprocesses/: 05.협업 지능의 구현 - 순차적, 계층적 실행.md  n01_crewai_for_tools.py  n02_process_with_sequential.py  n03_process_with_hierarchical.py
codes/n06_useful_apis_for_services/: README.md
codes/n07_travel_coordinator_with_tools/: n01_using_toos.ipynb
codes/n08_travel_coordinator_with_crewais/: agents.py  app.py
dockers/: Dockerfile
